2011-07-19  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Makefile.postamble:
	Install ObjectiveC2 compatibility headers only if that is built (which
	should be only if no 'real' objc2 library is available).
	Also generate an objc/runtime.h header to include objectiveC2/runtime.h
	so that people can just include objc/runtime.h to use the new runtime
	API irrespective of whether the API is provided by the actual runtime
	library or by the compatibility library.

2011-07-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile:
	* Source/GSRunLoopWatcher.h:
	* Source/NSXMLPrivate.h:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSFileHandle.m:
	* Source/win32/NSMessagePort.m:
	* Source/win32/GSRunLoopCtxt.m:
	* Source/win32/NSStream.m:
	* Source/common.h:
	* Source/Additions/GSXML.m:
	* Source/Additions/GSFunctions.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/GSURLPrivate.h:
	* SSL/GSSSLHandle.m:
	* Makefile.postamble:
	* configure.ac:
	* Headers/GNUstepBase/GSConfig.h.in:
	* Headers/GNUstepBase/GSFunctions.h:
	* Headers/GNUstepBase/GSObjCRuntime.h:
	* Headers/Foundation/NSZone.h:
	* Tools/make_strings/make_strings.m:
	* configure: regenerate
	Remove references to obsolete header.

2011-07-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Fix faulty assert.

2011-07-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileHandle.m:
	* SSL/GSSSLHandle.m:
	* Headers/Foundation/NSFileHandle.h:
	Fixup to let certificate information contain a chaing with intermediate
	certificate authorities.  Simplify handshake using common routine for
	non-blocking handshake attempt.

2011-07-11 14:31 David Chisnall <theraven@gna.org>

	* Source/NSAutoreleasePool.m,
	  Source/NSThread.m: Lazily initialize POSIX
	  threads, matching OS X behaviour and stopping us from crashing
	  when calling autorelease from a thread that was not previously
	  registered explicitly (yuck!)
	  
	  Also do some quite hacky (and not totally correct) things to try